@@ -66,6 +66,8 @@ Build
 IDLE
 ----
 
+- Issue #18910: Add unittest for textView. Patch by Phil Webster.
+
 - Issue #18292: Add unittest for AutoExpand. Patch by Saihadhav Heblikar.
 
 - Issue #18409: Add unittest for AutoComplete. Patch by Phil Webster.
